# Lab6

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  README.md  coverage.yml  license.rtf
.github/workflows/: ci.yml  coverage.yml  release.yml
banking/: .gitignore  CMakeLists.txt
banking/tests/: CMakeLists.txt  mock_account.h  test_account.cpp  test_transaction.cpp
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt  solver.cpp
tests/: CMakeLists.txt  mock_account.h  test_account.cpp  test_transaction.cpp
