cmake_minimum_required(VERSION 3.10)
project(banking)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SOURCES Account.cpp Transaction.cpp)
add_library(banking STATIC ${SOURCES})
target_include_directories(banking PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
enable_testing()
add_subdirectory(banking)
add_subdirectory(tests)
